1. problemMatcher支持解析相对目录 2. PROJECT_INCLUDEDIRS 支持多个相对目录

--- a/components/gd32vf10x/.project/vscode/c_cpp_properties.json.in
+++ b/components/gd32vf10x/.project/vscode/c_cpp_properties.json.in
@@ -5,6 +5,7 @@
             "includePath": [
                 "${workspaceFolder}/**",
                 "@PHNX_SDF@/components/@TARGET@/**"
+                "@PHNX_SDF@/components/freertos/**"
             ],
             "defines": [
                 "_DEBUG",
@@ -15,7 +16,7 @@
                 "limitSymbolsToIncludedHeaders": true,
                 "path": [
                     "@PHNX_SDF@/components/@TARGET@/**",
-                    ""
+                    "@PHNX_SDF@/components/freertos/**"
                 ]
             },
             "compilerPath": "@CMAKE_C_COMPILER@",
