--- a/components/gd32vf10x/.project/vscode/tasks.json.in
+++ b/components/gd32vf10x/.project/vscode/tasks.json.in
@@ -15,7 +15,13 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "problemMatcher": ["$gcc"]
+            "problemMatcher": {
+                "base": "$gcc",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}/build/"
+                ]
+            }
         },
         {
             "label": "clean",
@@ -48,7 +54,13 @@
                 "flash"
             ],
             "group": "build",
-            "problemMatcher": ["$gcc"]
+            "problemMatcher": {
+                "base": "$gcc",
+                "fileLocation": [
+                    "relative",
+                    "${workspaceFolder}/build/"
+                ]
+            }
         },
         {
             "label": "softreset",
