--- a/components/embUnit/CMakeLists.txt
+++ b/components/embUnit/CMakeLists.txt
@@ -1,13 +1,15 @@
 # COMPONENT CMakeList.txt说明
 
 # COMPONENT_SRCS: 本组件的源文件列表, 以库的形式链接
-file(GLOB COMPONENT_SRCS  "embUnit/*.c")
+file(GLOB EMBUNIT_SRCS  "embUnit/*.c")
+file(GLOB TEXTUI_SRCS  "textui/*.c")
+set(COMPONENT_SRCS  "${EMBUNIT_SRCS} ${TEXTUI_SRCS}")
 
 # COMPONENT_EXTRA_SRCS: 对于TARGET平台组件, stubs和启动代码应直接链接到主目标文件
 # set(COMPONENT_EXTRA_SRCS ${STUBS}  ${STARTUP_SRCS})
 
 # COMPONENT_ADD_INCLUDEDIRS: 引出到应用工程的include目录
-set(COMPONENT_ADD_INCLUDEDIRS ".")
+set(COMPONENT_ADD_INCLUDEDIRS ". ./textui" )
 
 # COMPONENT_PRIV_INCLUDEDIRS: 编译本组件需要的内部头文件目录
 # set(COMPONENT_PRIV_INCLUDEDIRS "")
